--- a/partials/main.html
+++ b/partials/main.html
@@ -1,7 +1,5 @@
 <ul>
     <li ng-repeat="post in posts">
-        <a href="{{post.ID}}">
-            {{post.title}}
-        </a>
+        <a href="#/{{post.ID}}"> {{post.title}} </a>
     </li>
 </ul>
